--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Space3Dynamics<span>.</span></h1>
+          <h1>
+            <img src="assets/img/medium_logo.png" width="400"> 
+          </h1>
           <h2>We are team of talanted digital marketers</h2>
         </div>
       </div>
