--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
           <li class="drop-down"><a href="">Products</a>
             <ul>
               <li><a href="#">Power Systems</a></li>
-              <li class="drop-down"><a href="#">Attitude & Orbit Control Systems</a>
+              <li><a href="#">Attitude & Orbit Control Systems</a>
                <!-- ======= <ul>
+              <li class="drop-down"><a href="#">Attitude & Orbit Control Systems</a>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
                 </ul>======= -->
               </li>
             </ul>
           </li>
+          <li><a href="#education">Education</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
 
