--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li class="drop-down"><a href="">Products</a>
+          <li class="drop-down"><a href="products">Products</a>
             <ul>
               <li><a href="#">Power Systems</a></li>
               <li><a href="#">Attitude & Orbit Control Systems</a>
@@ -156,7 +156,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Clients Section ======= -->
+    <!-- ======= Clients Section 
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
@@ -172,9 +172,9 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section><!-- End Clients Section --> ======= -->
 
-    <!-- ======= Features Section ======= -->
+    <!-- ======= Features Section 
     <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
@@ -205,7 +205,7 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section><!-- End Features Section --> ======= -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -283,8 +283,8 @@
       </div>
     </section><!-- End Cta Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!-- ======= Products Section ======= -->
+    <section id="products" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -434,7 +434,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Products Section -->
 
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
