--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li class="drop-down"><a href="products">Products</a>
+          <li class="drop-down"><a href="#products">Products</a>
             <ul>
-              <li><a href="#">Power Systems</a></li>
-              <li><a href="#">Attitude & Orbit Control Systems</a>
+              <li><a href="#power_systems">Power Systems</a></li>
+              <li><a href="#aocs">Attitude & Orbit Control Systems</a>
                <!-- ======= <ul>
               <li class="drop-down"><a href="#">Attitude & Orbit Control Systems</a>
                   <li><a href="#">Deep Drop Down 1</a></li>
