--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Check our Portfolio</p>
+          <h2>Products</h2>
+          <p>Check our products</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -652,7 +652,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.cl/maps/place/Calle+San+Ignacio+de+Loyola+1286,+Santiago,+Regi%C3%B3n+Metropolitana/@-33.4621839,-70.6541885,17.25z/data=!4m5!3m4!1s0x9662c510d2015ecb:0xf39679f62f698999!8m2!3d-33.4625778!4d-70.6550939" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
@@ -662,19 +662,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>San Ignacio 1286, Santiago, Chile</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>els.obrq@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+569 78224530</p>
               </div>
 
             </div>
