--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
               <div class="member-img">
                 <img src="assets/img/team/gdiaz.jpg" class="img-fluid" alt="" width="300" height="300">
                 <div class="social">
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/gustavo-diaz-ingeniero-die/"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -446,7 +446,7 @@
               <div class="member-img">
                 <img src="assets/img/team/sgutierrez.jpg" class="img-fluid" alt="" width="300" height="300">
                 <div class="social">
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://cl.linkedin.com/in/samuel-gutiérrez-russell-278a0024"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -493,6 +493,7 @@
 
           </div>
 
+          <!-- =======
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
@@ -523,7 +524,7 @@
             </form>
 
           </div>
-
+        ======= -->
         </div>
 
       </div>
