--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-prop">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/adcs.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Thruster</h4>
                 <p>development stage</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/adcs.png" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
