--- a/index.html
+++ b/index.html
@@ -92,26 +92,26 @@
         <div class="col-xl-2 col-md-4 col-6">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Products</a></h3>
+            <h3><a href="#products">Products</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6 ">
           <div class="icon-box">
             <i class="ri-terminal-box-line"></i>
-            <h3><a href="">Services</a></h3>
+            <h3><a href="#services">Services</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-database-2-line"></i>
-            <h3><a href="">Projects</a></h3>
+            <h3><a href="subpage/projects-details.html">Projects</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
           <div class="icon-box">
             <!-- ======= <i class="ri-contacts-book-line"></i> ======= -->
             <i class="ri-mail-send-line"></i>
-            <h3><a href="">Contacts</a></h3>
+            <h3><a href="#contact">Contacts</a></h3>
           </div>
         </div>
       </div>
@@ -133,9 +133,10 @@
             <h3>Our mission</h3>
             <p class="font-italic">
               We are a team with experience in nanosatellites, control systems, propulsion and development of subsystems
-              that begins under the auspices of the SUCHAI 2 & 3 Project of the University of Chile. We have been trained
+              that begins under the auspices of the SUCHAI 2 & 3 Project of the University of Chile
+              (<a href="https://spel.cl/">SPEL</a>). We have been trained
               in simulation of the space environment at the University of Tokyo, Japan thanks to the SEELA program.
-              Our objective is:
+              Our missions are:
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Sell relatively low-cost products through a recycled manufacturing model.</li>
@@ -144,7 +145,8 @@
             </ul>
             <p>
               Currently, our team members are part of the <a href="https://plantsat.spel.cl/">PlantSat project</a>, an international project in collaboration
-              with RocketLab and Gomspace.
+              with <a href="https://www.rocketlabusa.com/">RocketLab</a> and
+              <a href="https://gomspace.com/home.aspx">Gomspace</a>.
             </p>
           </div>
         </div>
@@ -237,7 +239,6 @@
     <!-- ======= Products Section ======= -->
     <section id="products" class="portfolio">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Products</h2>
           <p>Check our products</p>
@@ -264,7 +265,7 @@
                 <p>testing stage</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/RW-version-1.4-pic1.JPG" data-gall="portfolioGallery" class="venobox" title="Reaction Wheel"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="subpage/components-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -278,7 +279,7 @@
                 <p>testing stage</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/stt.png" data-gall="portfolioGallery" class="venobox" title="Star tracker"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="subpage/components-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -292,7 +293,7 @@
                 <p>development stage</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/adcs.png" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="subpage/components-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -325,7 +326,7 @@
               <li><i class="ri-check-double-line"></i> Tutorial course to use free development simulators.</li>
             </ul>
             <p>
-              * Some services may be free for high schools. You can find free projects <a href=""> here </a>.
+              * Some services may be free for high schools. You can find free projects <a href="subpage/projects-details.html"> here </a>.
             </p>
           </div>
         </div>
@@ -576,16 +577,6 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div>
-
         </div>
       </div>
     </div>
