--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Space3Dynamics</title>
+  <title>EmbeddedSystemsforAerospaceTechnologySpa</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -82,9 +82,8 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>
-            <img src="assets/img/SpaceCubeDynamics.png" width="600"> 
+            <img src="assets/img/eSATNombre.png" width="600">
           </h1>
-          <h2>We are a talented and visionary team</h2>
         </div>
       </div>
 
@@ -436,7 +435,7 @@
               </div>
               <div class="member-info">
                 <h4>Gustavo Díaz</h4>
-                <span>CTO</span>
+                <span>CIO</span>
                 <span>Electrical Engineer</span>
               </div>
             </div>
@@ -452,7 +451,7 @@
               </div>
               <div class="member-info">
                 <h4>Samuel Gutierrez</h4>
-                <span>CIO</span>
+                <span>CTO</span>
                 <span>PhD in Electrical Engineering</span>
               </div>
             </div>
@@ -541,7 +540,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>S3D</h3>
+              <h2>eSAT</h2>
               <p>
                 Santiago, Chile<br><br>
                 <strong>Phone:</strong> +569 78224530<br>
