--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Estimation algorithms</a></h4>
-              <p>EKF implementation for different types of sensors.</p>
+              <p>Implementation of the EKF, QUEST and TRIAL methods for different types of sensors.</p>
             </div>
           </div>
 
